fixed border on spill list.

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -441,7 +441,7 @@ nav.navbar{
 
                 .single {
                     padding: 8px 0;
-                    border: 1px solid #f7f7f7;
+                    border-top: 1px solid #f7f7f7;
                         
                     &:hover {
                         background: #428bca;
